- Added getters for Rental - Fixed DatabaseSeeder - Fixed Rental test